# raytracingbutgood

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  raytracingbutgood.kdev4
src/: Framebuffer.cpp  Framebuffer.h  Octree.cpp  Octree.h  Ray.h  aabb.cpp  aabb.h  bvh_node.cpp  bvh_node.h  camera.h  common.h  data.h  geometry.h  hittable.h  hittable_list.cpp  hittable_list.h  hyperbolic.cpp  hyperbolic.h  image_texture.h  interval.cpp  interval.h  lights.h  main.cpp  material.h  mesh.cpp  mesh.h  meshLoader.h  objLoader.h  perlin.cpp  perlin.h  quadilateral.cpp  quadilateral.h  sphere.cpp  sphere.h  texture.cpp  texture.h  triangle.cpp  triangle.h
src/bxdf/: bxdf.cpp  bxdf.h
